force-app/main/default/objects/Data_Train_Run__c/Data_Train_Run__c.object-meta.xml
<CustomObject>
    <label>Data Train Run</label><pluralLabel>Data Train Runs</pluralLabel>
    <nameField><label>Run Number</label><type>AutoNumber</type><displayFormat>DT-{000000}</displayFormat></nameField>
<sharingModel>Private</sharingModel>
</CustomObject>