force-app/main/default/objects/Data_Train_Run__c/fields/Destination_Record_Id__c.field-meta.xml
<CustomField><fullName>Destination_Record_Id__c</fullName><label>Destination Record ID</label><type>Text</type><length>18</length></CustomField>