force-app/main/default/objects/Data_Train_Run__c/fields/Result__c.field-meta.xml
<CustomField><fullName>Result__c</fullName><label>Result</label><type>LongTextArea</type><length>32768</length><visibleLines>15</visibleLines></CustomField>