force-app/main/default/objects/Data_Train_Run__c/fields/Source_Object__c.field-meta.xml
<CustomField><fullName>Source_Object__c</fullName><label>Source Object</label><type>Text</type><length>80</length></CustomField>