force-app/main/default/objects/Data_Train_Run__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField><fullName>Source_Record_Id__c</fullName><label>Source Record ID</label><type>Text</type><length>18</length></CustomField>