force-app/main/default/objects/Data_Train_Run__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Text</type><length>20</length></CustomField>